# bighill

./: .gitignore  Makefile  README.md  agent-registry-service.Dockerfile  api-gateway.Dockerfile  data-ingestion-service.Dockerfile  data-registry-service.Dockerfile  data-stream-service.Dockerfile  docker-compose-data.yml  docker-compose-lakehouse.yml  docker-compose-services.yml  feature-materializer-service.Dockerfile  inference-service.Dockerfile  ingestion-service.Dockerfile  migrations.Dockerfile  model-registry-service.Dockerfile  model-serving-service.Dockerfile  profile-service.Dockerfile  socket-service.Dockerfile  tenant-service.Dockerfile  tool-catalog-service.Dockerfile  tool-execution-service.Dockerfile  tool-service.Dockerfile  training-jobs.Dockerfile  training-service.Dockerfile
.githooks/: pre-commit
agent_registry_service/: Makefile  main.go
agent_registry_service/helm/: Chart.yaml  prod-values.yaml  staging-values.yaml  values.yaml
agent_registry_service/scripts/: build.sh  config.sh  install.sh  test.sh
agent_registry_service/test/: integration_test.go
api_gateway/: .gitignore  Makefile  README.md  samconfig.toml  template.local.generated.yml  template.yml
api_gateway/scripts/: build.sh  check-docker.sh  config.sh  install.sh  local-template.sh  run.sh  stop.sh  test.sh  watch.sh
api_gateway/test/: agent_registry_flywheel_workflow_test.go  agent_tool_use_workflow_test.go  data_materialization_workflow_test.go  data_registry_test.go  data_stream_datasource_test.go  full_ml_loop_test.go  helpers_test.go  huggingface_real_onboarding_test.go  kafka_assert_helpers_test.go  multi_lora_serving_test.go  org_rbac_inference_test.go  profile_test.go  rag_inference_workflow_test.go  suite_test.go  tool_catalog_workflow_test.go
data_contracts/: Makefile
data_contracts/prompts/: graph_extraction_prompt_v1.md  prompts.go
data_contracts/protobufs/: agent_registry.proto  data_ingestion.proto  data_registry.proto  data_registry_service.proto  dataset.proto  feature_materializer.proto  inference.proto  ingestion.proto  model_registry.proto  profile.proto  profile_event.proto  tool_catalog.proto  tools.proto  training.proto
data_contracts/schemas/: agent_spec.schema.json  golden_task.schema.json  graph_extraction_v1.schema.json  schemas.go  (+1 more)
data_ingestion_service/: Makefile  README.md  main.go
data_registry_service/: .gitignore  README.md  main.go  main_test.go
data_stream_service/: .gitignore  Makefile  README.md  main.go
data_stream_service/internal/infra/queryengine/datafusion_query_engine/: Cargo.toml
data_stream_service/internal/infra/queryengine/datafusion_query_engine/src/: main.rs  s3_storage.rs
data_stream_service/internal/infra/queryengine/datafusion_query_engine/tests/: cli_parquet_test.rs
database/: .gitignore  Makefile  readme.md
docs/: agent-extension-architecture.md  agent-tool-plane.md  agentic-rails.md  data-contracts.md  multi-lora-serving.md  proposal-agentic-rails.md  self-improving-loop.md  slice-1-component-capability.md
e2e_tests/: Makefile  full_ml_loop_test.go
feature_materializer_service/: README.md  main.go  main_test.go
inference_service/: README.md  main.go  main_test.go
infra/: README.md
ingestion_service/: .gitignore  Makefile  README.md  main.go
model_registry_service/: README.md  main.go  main_test.go
model_serving_service/: Makefile  README.md  main.go  main_test.go
pdf_extractor_lib/: .gitignore  Dockerfile.build.glibc  Dockerfile.build.musl  Makefile  README.md  go.mod  go.sum
pdf_extractor_lib/cpp/: CMakeLists.txt
pdf_extractor_lib/cpp/src/: CMakeLists.txt
pdf_extractor_lib/cpp/src/bridge/go/: cgo_pdf_extractor.cpp  cgo_pdf_extractor.h
pdf_extractor_lib/cpp/test/: CMakeLists.txt
pdf_extractor_lib/cpp/test/unit/: ut_main.cpp
profile_service/: Makefile  README.md  main.go
query_engine/: README.md
scripts/: build-servers.sh  check-service-env-vars.sh  cicd-build-service-binaries.sh  cicd-detect-changed-services.sh  common.sh  docker-build.sh  docker-clean.sh  docker-db-migrations-push.sh  docker-db-migrations.sh  docker-push.sh  docker-start.sh  docker-stop.sh  export-env.sh  git-protect-secrets.sh  install-all.sh  install-cicd.sh  install-dev.sh  install-services.sh  start-data-sources.sh  start-infra.sh  start-lakehouse.sh  start-servers.sh  stop-data-sources.sh  stop-infra.sh  stop-lakehouse.sh  stop-servers.sh  test-api.sh  test-servers.sh
shared_lib/: Makefile
shared_py/: pyproject.toml
shared_py/bighill_model_artifacts/: __init__.py  gguf.py
shared_py/bighill_model_artifacts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
socket_service/: main.go
tenant_service/: README.md  main.go
tool_catalog_service/: Makefile  README.md  main.go
tool_execution_service/: README.md  main.go
tool_service/: README.md  main.go
training_jobs/: Makefile  README.md  pyproject.toml
training_jobs/contracts/: training_job_contract.json
training_jobs/tests/: contract_test.py  evaluate_test.py  model_onboard_test.py  storage_test.py  train_test.py
training_jobs/training_jobs/: __init__.py  config.py  evaluate.py  manifest.py  model_onboard.py  promotion_report.py  storage.py  train.py
training_service/: README.md  main.go  main_test.go
training_service/training_jobs/: Makefile  README.md  pyproject.toml
training_service/training_jobs/training_jobs/: evaluate.py  manifest.py  model_onboard.py  process.py  promotion_report.py  storage.py
training_service/training_jobs/training_jobs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1293 files in other folders)
