[project]
name = "bighill-model-artifacts"
version = "0.1.0"
description = "Shared Python model artifact validation helpers for Bighill services"
requires-python = ">=3.11"
dependencies = [
    "gguf>=0.13",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bighill_model_artifacts*"]
