[project]
name = "training-jobs"
version = "0.1.0"
description = "Batch training and evaluation entrypoints for the LLM platform"
requires-python = ">=3.11"

[project.optional-dependencies]
runtime = [
    "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
