[project]
name = "training-jobs"
version = "0.1.0"
description = "Batch training and evaluation entrypoints for the LLM platform"
requires-python = ">=3.11"

[project.optional-dependencies]
runtime = [
    "boto3>=1.34",
    "datasets>=2.19",
    "huggingface_hub>=0.24",
    "openai>=1.0",
    "ray[default]>=2.46",
    "ragas>=0.2",
    "deepchecks>=0.18",
    "evidently>=0.7",
]
eval = [
    "datasets>=2.19",
    "openai>=1.0",
    "ragas>=0.2",
]
promotion = [
    "deepchecks>=0.18",
    "evidently>=0.7",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
