[package]
name = "datafusion_query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11"
datafusion = "54.0.0"
iceberg = { package = "iceberg-arrow58", version = "0.9.3" }
iceberg-catalog-rest = { package = "iceberg-catalog-rest-arrow58", version = "0.9.2" }
iceberg-datafusion = { package = "iceberg-datafusion-arrow58", version = "0.9.2" }
opendal = { version = "0.55.0", features = ["services-s3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
typetag = "0.2"

[dev-dependencies]
parquet = "58.3.0"
tempfile = "3.27.0"
