[package]
name = "datafusion_query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11"
datafusion = "=52.2.0"
iceberg = "=0.9.1"
iceberg-catalog-rest = "=0.9.1"
iceberg-datafusion = "=0.9.1"
iceberg-storage-opendal = { version = "=0.9.1", default-features = false, features = ["opendal-s3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
typetag = "0.2"

[dev-dependencies]
parquet = "=57.1.0"
tempfile = "3.27.0"
